--- a/thesis/references.bib
+++ b/thesis/references.bib
@@ -77,3 +77,39 @@
     journal = {Journal of Cryptographic Engineering},
     doi = {10.1007/s13389-016-0141-6}
 }
+
+@Article{Cimatti2000,
+    author="Cimatti, Alessandro
+    and Clarke, Edmund
+    and Giunchiglia, Fausto
+    and Roveri, Marco",
+    title="NUSMV: a new symbolic model checker",
+    journal="International Journal on Software Tools for Technology Transfer",
+    year="2000",
+    month="Mar",
+    day="01",
+    volume="2",
+    number="4",
+    pages="410--425",
+    issn="1433-2779",
+    doi="10.1007/s100090050046",
+    url="https://doi.org/10.1007/s100090050046"
+}
+
+@inproceedings{Cavada14,
+    author    = {Roberto Cavada and
+        Alessandro Cimatti and
+        Michele Dorigatti and
+        Alberto Griggio and
+        Alessandro Mariotti and
+        Andrea Micheli and
+        Sergio Mover and
+        Marco Roveri and
+        Stefano Tonetta},
+    title     = {The nuXmv Symbolic Model Checker},
+    booktitle = {CAV},
+    year      = {2014},
+    pages     = {334-342},
+    ee        = {http://dx.doi.org/10.1007/978-3-319-08867-9_22},
+    bibsource = {DBLP, http://dblp.uni-trier.de}
+}
