--- a/thesis/thesis.tex
+++ b/thesis/thesis.tex
@@ -50,6 +50,7 @@
 \newacronym{see}{SEE}{supervisor execution environment}
 \newacronym{rsa}{RSA}{Rivest–Shamir–Adleman}
 \newacronym{nmi}{NMI}{non-maskable interrupt}
+\newacronym{alu}{ALU}{arithmetic logic unit}
 
 \newacronym{jal}{JAL}{jump and link}
 \newacronym{jalr}{JALR}{jump and link register}
@@ -57,6 +58,7 @@
 \newacronym{ebreak}{EBREAK}{environment breakpoint}
 \newacronym{mret}{MRET}{machine trap return}
 \newacronym{uret}{URET}{user trap return}
+\newacronym{nop}{NOP}{no-operation}
 
 % static information csrs
 \newacronym{misa}{misa}{machine ISA register}
